// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputModal render should render aria label 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-5"
          aria-label="Some aria label - modal"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-4"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-3"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-5"
          >
            <input
              aria-invalid="false"
              aria-label="Some aria label"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-3"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render open 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-3"
          aria-label="input text - modal"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-2"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-2-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-3"
          >
            <input
              aria-invalid="false"
              aria-label="input text"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-1"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render title 1`] = `
<body
  class="pf-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-c-backdrop"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-4"
          aria-label="input text - modal"
          aria-labelledby="pf-modal-part-2 pf-modal-part-3"
          aria-modal="true"
          class="pf-c-modal-box ins-c-inventory__detail--edit pf-m-sm"
          data-ouia-component-id="OUIA-Generated-Modal-small-3"
          data-ouia-component-type="PF4/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
          <header
            class="pf-c-modal-box__header"
          >
            <h1
              class="pf-c-modal-box__title"
              id="pf-modal-part-3"
            >
              
              <span
                class="pf-c-modal-box__title-text"
              >
                Some title
              </span>
            </h1>
          </header>
          <div
            class="pf-c-modal-box__body"
            id="pf-modal-part-4"
          >
            <input
              aria-invalid="false"
              aria-label="input text"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              type="text"
              value=""
            />
          </div>
          <footer
            class="pf-c-modal-box__footer"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-primary"
              data-action="confirm"
              data-ouia-component-id="OUIA-Generated-Button-primary-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Save
            </button>
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-action="cancel"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Cancel
            </button>
          </footer>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextInputModal render should render without any props 1`] = `
<body>
  <div />
  <div />
</body>
`;
